--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "immer": "^9.0.12",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.2",
     "swiper": "^8.0.7",
     "zustand": "^3.7.1"
